# nerdhosting-api

./: Dockerfile  README.md  dependencies.py  main.py  pyproject.toml
routers/: websocket.py
routers/minecraft/: vanilla.py
utils/: database.py  logger.py  proxmox.py
